--- a/k8s_manifests/backend-deployment.yaml
+++ b/k8s_manifests/backend-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: public.ecr.aws/w8u5e4v2/workshop-backend:v1
+        image: public.ecr.aws/i4n2j1q0/backendproject:latest
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
